--- a/components.html
+++ b/components.html
@@ -6,21 +6,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id="header">
+<div id="header"> <!-- Khung Header -->
     <div style="width: 200px; height: 100px; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 10px; display: inline-flex">
         <img style="width: 200px; height: 100px" src="logo.png">
     </div>
-    <div class="hder">
-        <div class="navigation">Giới thiệu</div>
-        <div class="navigation">Đào tạo</div>
-        <div class="navigation">Tuyển sinh</div>
-        <div class="navigation">Tin tức</div>
-        <div class="navigation">Khoa học - Công nghê</div>
-        <div class="navigation">Liên hệ</div>
+    <div class="rHeader">
+        <ul class="navbar">
+            <li class="navigation"><a class="nav-name" href="#">Giới thiệu</a></li>
+            <li class="navigation">
+                <a href="#" class="nav-name">Đào tạo</a>
+                <ul class="dropdown-menu">
+                    <li class="nav-item"><a href="#" class="dropdown-item">Bậc Đại học</a></li>
+                    <li class="nav-item"><a href="#" class="dropdown-item">Sau Đại học</a></li>
+                </ul>
+            </li>
+            <li class="navigation">
+                <a href="#" class="nav-name">Tuyển sinh</a>
+                <ul class="dropdown-menu">
+                    <li class="nav-item"><a href="#" class="dropdown-item">Bậc Đại học</a></li>
+                    <li class="nav-item"><a href="#" class="dropdown-item">Sau Đại học</a></li>
+                </ul>
+            </li>
+            <li class="navigation">
+                <a href="#" class="nav-name">Tin tức</a>
+                <ul class="dropdown-menu">
+                    <li class="nav-item"><a href="#" class="dropdown-item">Tin Học vụ</a></li>
+                    <li class="nav-item"><a href="#" class="dropdown-item">Tin Tốt nghiệp</a></li>
+                    <li class="nav-item"><a href="#" class="dropdown-item">Tin Tuyển dụng</a></li>
+                    <li class="nav-item"><a href="#" class="dropdown-item">Tin khác</a></li>
+                </ul>
+            </li>
+            <li class="navigation"><a href="#" class="nav-name">Khoa học - Công nghệ</a></li>
+            <li class="navigation"><a href="#" class="nav-name">Liên hệ</a></li>
+        </ul>
     </div>
     <div style="padding: 10px; justify-content: center; align-items: center; gap: 10px; display: flex">
         <img src="flag.svg" style="width: 32px; height:32px">
     </div>
+</div>
 </div>
 </body>
 </html>
