--- a/components.html
+++ b/components.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <title>Trang chủ Khoa Khoa học và Kỹ thuật thông tin</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css?family=Gelasio:700,600|Inter:300,400,500|Inknut+Antiqua:600,800" rel="stylesheet">
 </head>
+
 <body>
 <div id="header"> <!-- Khung Header -->
     <div style="width: 200px; height: 100px; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 10px; display: inline-flex">
@@ -45,5 +50,105 @@
     </div>
 </div>
 </div>
+
+<!--Footer-->
+    <div class="footer" data-model-id="947:6280">
+      <footer class="class">
+        <div class="frame">
+          <div class="div">
+            <div class="div-wrapper">
+              <a href="https://ise.uit.edu.vn" class="fit-uit-edu-vn" aria-label="Visit ISE UIT website"
+                >ise.uit.edu.vn</a
+              >
+            </div>
+            <div class="frame-2">
+              <img
+                class="letter-c-circle"
+                src="https://c.animaapp.com/zhdRCLlK/img/letter-c-circle-3.svg"
+                alt="Copyright icon"
+                role="img"
+              />
+              <div class="div-wrapper">
+                <p class="element-khoa-khoa-h-c-v">
+                  2025 Khoa Khoa học và Kỹ thuật Thông tin,<br />Trường ĐH CNTT, ĐHQG-HCM
+                </p>
+              </div>
+            </div>
+          </div>
+          <nav class="div" aria-label="Social media links">
+            <h2 class="text-wrapper">Follow us</h2>
+            <ul class="frame-3">
+              <li>
+                <a
+                  href="https://facebook.com"
+                  aria-label="Visit our Facebook page"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img class="img" src="https://c.animaapp.com/zhdRCLlK/img/brand-facebook-3.svg" alt="Facebook" />
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://instagram.com"
+                  aria-label="Visit our Instagram page"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img class="img" src="https://c.animaapp.com/zhdRCLlK/img/brand-instagram-3.svg" alt="Instagram" />
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://youtube.com"
+                  aria-label="Visit our YouTube channel"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img class="img" src="https://c.animaapp.com/zhdRCLlK/img/brand-youtube-3.svg" alt="YouTube" />
+                </a>
+              </li>
+              <li>
+                <a href="https://zalo.me" aria-label="Contact us on Zalo" target="_blank" rel="noopener noreferrer">
+                  <img class="img" src="https://c.animaapp.com/zhdRCLlK/img/zalo-2.svg" alt="Zalo" />
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <section class="frame-4" aria-labelledby="contact-heading">
+          <div class="div">
+            <div class="frame-5">
+              <div class="frame-6">
+                <h2 id="contact-heading" class="text-wrapper-2">Thông tin liên hệ</h2>
+              </div>
+              <div class="frame-7">
+                <h3 class="text-wrapper-3">Văn phòng Khoa KH-KTTT</h3>
+              </div>
+            </div>
+            <address class="frame-8">
+              <p class="p">
+                Phòng E10.2, Khu E, Trường Đại học Công nghệ Thông tin, Khu phố 34, Phuờng Linh Xuân, TP. Hồ Chí Minh
+              </p>
+            </address>
+          </div>
+          <div class="frame-9">
+            <div class="frame-6">
+              <p class="div-2">
+                <span class="span">Số điện thoại:</span>
+                <a href="tel:+84923324255" class="text-wrapper-4">0923324255</a>
+              </p>
+            </div>
+            <div class="frame-6">
+              <p class="div-2">
+                <span class="span">Email: </span>
+                <a href="mailto:ise.uit@gmail.edu.vn" class="text-wrapper-4">ise.uit@gmail.edu.vn</a>
+              </p>
+            </div>
+          </div>
+        </section>
+      </footer>
+    </div>
+
 </body>
 </html>
