Add changes to link lien_he.html and lien_he.css

--- a/pages/lien_he.html
+++ b/pages/lien_he.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- Liên kết file CSS bên ngoài -->
-  <link rel="stylesheet" href="lien_he.css">
+  <link rel="stylesheet" href="../styles/lien_he.css">
 </head>
 
 <body>
