--- a/pages/dao_tao.html
+++ b/pages/dao_tao.html
@@ -5,21 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Đào tạo - Khoa Khoa học và kỹ thuật thông tin</title>
+    <link rel="stylesheet" href="../styles/components.css" />
     <link rel="stylesheet" href="../styles/daotao.css" />
     <script src="../js/dao_tao.js" defer></script>
 </head>
 <body>
-    <div class="container">
-        <!-- Header -->
-        <object data="../components/header.html" type="text/html" width="100%" height="80" id="header-object">
-            <!-- Fallback với embed nếu object không load được -->
-            <embed src="../components/header.html" type="text/html" width="100%" height="80" style="border: none;">
-            <!-- Fallback cuối cùng -->
-            <p style="text-align: center; padding: 20px; background: #f0f0f0; margin: 0;">
-                Unable to load header component.
-            </p>
-        </object>
+    
+    <!-- Header sẽ được load vào đây -->
+    <div id="header-container"></div>
 
+    <div class="container">
         <!-- Giới thiệu tab -->
         <section class="hero-section">
             <h1 class="hero-title">Chương trình Đào tạo</h1>
@@ -1096,9 +1091,7 @@
                         <strong>Yêu cầu công bố:</strong> Tối thiểu 2 bài báo ISI/Scopus làm tác giả chính
                     </p>
 
-                    <div class="content-image">
-                        <img src="assets/phd-research-areas.jpg" alt="Các hướng nghiên cứu Tiến sĩ">
-                    </div>
+
 
                     <h3 class="section-title">Các hướng nghiên cứu chính</h3>
                     <div class="curriculum-table">
@@ -1203,6 +1196,7 @@
         </main>
 
     </div>
+    <div id="footer-container"></div>
 
 </body>
 </html>
