Refactor footer and header components for improved structure and styling; enhance responsiveness and accessibility in dao_tao page layout.

--- a/pages/dao_tao.html
+++ b/pages/dao_tao.html
@@ -38,8 +38,9 @@
             </div>
         </div>
 
-        <!-- Program Navigation Cards -->
-        <aside class="program-cards">
+        <div class="content-wrapper">
+            <!-- Program Navigation Cards -->
+            <aside class="program-cards">
             <h3 class="program-title">Ngành đào tạo</h3>
             
             <!-- Bachelor's Programs -->
@@ -1194,6 +1195,7 @@
                 </div>
             </div>
         </main>
+        </div>
 
     </div>
     <div id="footer-container"></div>
