Add header and footer for lien_he.html, create lien_he.js

--- a/pages/lien_he.html
+++ b/pages/lien_he.html
@@ -6,16 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Liên hệ - Khoa Khoa học và Kỹ thuật Thông tin</title>
   
-  <!-- Liên kết font Inter -->
+  <!-- Liên kết font Inter, file css, components -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-
+  <link rel="stylesheet" href="../styles/components.css"> 
   <link rel="stylesheet" href="../styles/lien_he.css">
 </head>
 
 <body>
-
+      <!-- Header Placeholder -->
+     <div id="header-placeholder"></div>
   <div class="container">
     <!-- Main Content -->
     <main>
@@ -94,7 +95,10 @@
       </div>
     </main>
   </div>
-  
+  <!-- Footer Placeholder -->
+      <div id="footer-placeholder"></div>
+      <script src="../js/lien_he.js"></script>
+
 </body>
 
 </html>
