Changes on KHCN tab

--- a/pages/doi-ngu-nhan-su/doi-ngu-nhan-su_khoavt.html
+++ b/pages/doi-ngu-nhan-su/doi-ngu-nhan-su_khoavt.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div id="header-container"></div>
     <main class="profile-container">
         <!-- Thông tin giảng viên -->
         <section class="profile-intro profile-card">
@@ -122,5 +123,7 @@
                 </article>
             </section>
     </main>
+    <div id="footer-container"></div>
+    <script src="../../js/main.js"></script>
 </body>
 </html>
