--- a/pages/lien_he.html
+++ b/pages/lien_he.html
@@ -16,7 +16,7 @@
 
 <body>
       <!-- Header Placeholder -->
-     <div id="header-placeholder"></div>
+     <div id="header-container"></div>
   <div class="container">
     <!-- Main Content -->
     <main>
@@ -96,8 +96,8 @@
     </main>
   </div>
   <!-- Footer Placeholder -->
-      <div id="footer-placeholder"></div>
-      <script src="../js/lien_he.js"></script>
+      <div id="footer-container"></div>
+      <script src="../js/main.js"></script>
 
 </body>
 
