Rename tintuc.html into tinhocvu.html (1 of 4 News-pages) and change file tin_tuc.css due to this.

--- a/pages/tin_tuc/tinhocvu.html
+++ b/pages/tin_tuc/tinhocvu.html
@@ -132,12 +132,11 @@
 <div class="news-nav">
     <h2>TIẾP TỤC XEM VỚI...</h2>
     <div class="news-nav-flex">
-        <a class="news-nav-item">Tin tốt nghiệp</a>
-        <a class="news-nav-item">Tin học vụ</a>
-        <a class="news-nav-item">Tin tuyển dụng</a>
-        <a class="news-nav-item">Tin <abrr title="Khoa học - Công nghệ">KHCN</abrr></a>
-        <a class="news-nav-item">Tin Cựu học viên</a>
-        <a class="news-nav-item">Tin khác</a>
+        <a class="news-nav-item" href="../tin_tuc/tintotnghiep.html">Tin tốt nghiệp</a>
+        <a class="news-nav-item active" href="../tin_tuc/tinhocvu.html">Tin học vụ</a>
+        <a class="news-nav-item" href="../tin_tuc/tintuyendung.html">Tin tuyển dụng</a>
+        <a class="news-nav-item" href="../tin_tuc/tinkhcn.html">Tin <abrr title="Khoa học - Công nghệ">KHCN</abrr></a>
+        <a class="news-nav-item" href="">Tin khác</a>
     </div>
 </div>
 </body>
