Refactor research group pages to use a common stylesheet and update image sources

--- a/pages/nhom-nghien-cuu/bao-mat-blockchain-iot.html
+++ b/pages/nhom-nghien-cuu/bao-mat-blockchain-iot.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bảo mật, Blockchain và IoT - Khoa Khoa học và Kỹ thuật Thông tin</title>
     <link rel="stylesheet" href="../../styles/components.css" />
-    <link rel="stylesheet" href="../../styles/bao-mat-blockchain-iot.css" />
+    <link rel="stylesheet" href="../../styles/nhom-nghien-cuu.css" />
 </head>
 <body>
     <!-- Header -->
@@ -17,7 +17,7 @@
         </header>
 
         <section class="page-content">
-            <img src="../../assets/news-decorate-picture-3.jpg" alt="Bảo mật, Blockchain và IoT" class="main-image">
+            <img src="../../assets/bao-mat-blockchain.png" alt="Bảo mật, Blockchain và IoT" class="main-image">
 
             <div class="research-directions">
                 <h2>Hướng nghiên cứu</h2>
@@ -113,6 +113,6 @@
     <!-- Footer -->
     <div id="footer-container"></div>
 
-    <script src="../../js/bao-mat-blockchain-iot.js"></script>
+    <script src="../../js/utils.js"></script>
 </body>
 </html>
