--- a/pages/nhom-nghien-cuu/khoa-hoc-thong-tin-dia-ly.html
+++ b/pages/nhom-nghien-cuu/khoa-hoc-thong-tin-dia-ly.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khoa học thông tin địa lý - Khoa Khoa học và Kỹ thuật Thông tin</title>
     <link rel="stylesheet" href="../../styles/components.css" />
-    <link rel="stylesheet" href="../../styles/khoa-hoc-thong-tin-dia-ly.css" />
+    <link rel="stylesheet" href="../../styles/nhom-nghien-cuu.css" />
 </head>
 <body>
     <!-- Header -->
@@ -17,7 +17,7 @@
         </header>
 
         <section class="page-content">
-            <img src="../../assets/news-decorate-picture-4.jpg" alt="Khoa học thông tin địa lý" class="main-image">
+            <img src="../../assets/khoa-hoc-thong-tin-dia-ly.png" alt="Khoa học thông tin địa lý" class="main-image">
 
             <div class="research-directions">
                 <h2>Hướng nghiên cứu</h2>
@@ -52,6 +52,6 @@
     <!-- Footer -->
     <div id="footer-container"></div>
 
-    <script src="../../js/khoa-hoc-thong-tin-dia-ly.js"></script>
+    <script src="../../js/utils.js"></script>
 </body>
 </html>
