--- a/pages/nhom-nghien-cuu/phat-trien-he-thong.html
+++ b/pages/nhom-nghien-cuu/phat-trien-he-thong.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phát triển hệ thống và ứng dụng - Khoa Khoa học và Kỹ thuật Thông tin</title>
     <link rel="stylesheet" href="../../styles/components.css" />
-    <link rel="stylesheet" href="../../styles/phat-trien-he-thong.css" />
+    <link rel="stylesheet" href="../../styles/nhom-nghien-cuu.css" />
 </head>
 <body>
     <!-- Header -->
@@ -17,7 +17,7 @@
         </header>
 
         <section class="page-content">
-            <img src="../../assets/news-decorate-picture-2.jpg" alt="Phát triển hệ thống và ứng dụng" class="main-image">
+            <img src="../../assets/phat-trien-he-thong.png" alt="Phát triển hệ thống và ứng dụng" class="main-image">
 
             <div class="research-directions">
                 <h2>Hướng nghiên cứu</h2>
@@ -132,6 +132,6 @@
     <!-- Footer -->
     <div id="footer-container"></div>
 
-    <script src="../../js/phat-trien-he-thong.js"></script>
+    <script src="../../js/utils.js"></script>
 </body>
 </html>
