--- a/pages/nhom-nghien-cuu/xu-ly-du-lieu.html
+++ b/pages/nhom-nghien-cuu/xu-ly-du-lieu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xử lý dữ liệu, tín hiệu và hình ảnh - Khoa Khoa học và Kỹ thuật Thông tin</title>
     <link rel="stylesheet" href="../../styles/components.css" />
-    <link rel="stylesheet" href="../../styles/xu-ly-du-lieu.css" />
+    <link rel="stylesheet" href="../../styles/nhom-nghien-cuu.css" />
 </head>
 <body>
     <!-- Header -->
@@ -17,7 +17,7 @@
         </header>
 
         <section class="page-content">
-            <img src="../../assets/daotao_khdl_1.jpg" alt="Xử lý dữ liệu, tín hiệu và hình ảnh" class="main-image">
+            <img src="../../assets/xu-ly-du-lieu.png" alt="Xử lý dữ liệu, tín hiệu và hình ảnh" class="main-image">
 
             <div class="research-directions">
                 <h2>Hướng nghiên cứu</h2>
@@ -93,6 +93,6 @@
     <!-- Footer -->
     <div id="footer-container"></div>
 
-    <script src="../../js/xu-ly-du-lieu.js"></script>
+    <script src="../../js/utils.js"></script>
 </body>
 </html>
