--- a/pages/cac-nhom-nghien-cuu.html
+++ b/pages/cac-nhom-nghien-cuu.html
@@ -18,57 +18,57 @@
         </section>
 
         <section class="research-groups">
-            <a href="nhom-nghien-cuu/khoa-hoc-du-lieu.html" class="group-card-link">
+            <a href="nhom-nghien-cuu/khoa-hoc-du-lieu" class="group-card-link">
                 <div class="group-card">
-                    <img src="../assets/daotao_cntt_1.jpg" alt="Khoa học dữ liệu và Trí tuệ nhân tạo">
+                    <img src="../assets/khoa-hoc-du-lieu.png" alt="Khoa học dữ liệu và Trí tuệ nhân tạo">
                     <div class="group-card-title">
                         <h3>Khoa học dữ liệu và Trí tuệ nhân tạo</h3>
                     </div>
                 </div>
             </a>
-            <a href="nhom-nghien-cuu/xu-ly-du-lieu.html" class="group-card-link">
+            <a href="nhom-nghien-cuu/xu-ly-du-lieu" class="group-card-link">
                 <div class="group-card">
-                    <img src="../assets/daotao_khdl_1.jpg" alt="Xử lý dữ liệu, tín hiệu và hình ảnh">
+                    <img src="../assets/xu-ly-du-lieu.png" alt="Xử lý dữ liệu, tín hiệu và hình ảnh">
                     <div class="group-card-title">
                         <h3>Xử lý dữ liệu, tín hiệu và hình ảnh</h3>
                     </div>
                 </div>
             </a>
-            <a href="nhom-nghien-cuu/xu-ly-ngon-ngu.html" class="group-card-link">
+            <a href="nhom-nghien-cuu/xu-ly-ngon-ngu" class="group-card-link">
                 <div class="group-card">
-                    <img src="../assets/news-decorate-picture-1.jpg" alt="Xử lý ngôn ngữ tự nhiên">
+                    <img src="../assets/nlp.png" alt="Xử lý ngôn ngữ tự nhiên">
                     <div class="group-card-title">
                         <h3>Xử lý ngôn ngữ tự nhiên</h3>
                     </div>
                 </div>
             </a>
-            <a href="nhom-nghien-cuu/phat-trien-he-thong.html" class="group-card-link">
+            <a href="nhom-nghien-cuu/phat-trien-he-thong" class="group-card-link">
                 <div class="group-card">
-                    <img src="../assets/news-decorate-picture-2.jpg" alt="Phát triển hệ thống và ứng dụng">
+                    <img src="../assets/phat-trien-he-thong.png" alt="Phát triển hệ thống và ứng dụng">
                     <div class="group-card-title">
                         <h3>Phát triển hệ thống và ứng dụng</h3>
                     </div>
                 </div>
             </a>
-            <a href="nhom-nghien-cuu/bao-mat-blockchain-iot.html" class="group-card-link">
+            <a href="nhom-nghien-cuu/bao-mat-blockchain-iot" class="group-card-link">
                 <div class="group-card">
-                    <img src="../assets/news-decorate-picture-3.jpg" alt="Bảo mật, Blockchain và IoT">
+                    <img src="../assets/bao-mat-blockchain.png" alt="Bảo mật, Blockchain và IoT">
                     <div class="group-card-title">
                         <h3>Bảo mật, Blockchain và IoT</h3>
                     </div>
                 </div>
             </a>
-            <a href="nhom-nghien-cuu/khoa-hoc-thong-tin-dia-ly.html" class="group-card-link">
+            <a href="nhom-nghien-cuu/khoa-hoc-thong-tin-dia-ly" class="group-card-link">
                 <div class="group-card">
-                    <img src="../assets/news-decorate-picture-4.jpg" alt="Khoa học thông tin địa lý">
+                    <img src="../assets/khoa-hoc-thong-tin-dia-ly.png" alt="Khoa học thông tin địa lý">
                     <div class="group-card-title">
                         <h3>Khoa học thông tin địa lý</h3>
                     </div>
                 </div>
             </a>
-             <a href="nhom-nghien-cuu/tinh-toan-ky-thuat-nang-cao.html" class="group-card-link">
+             <a href="nhom-nghien-cuu/tinh-toan-ky-thuat-nang-cao" class="group-card-link">
                 <div class="group-card">
-                    <img src="../assets/news-decorate-picture-0.jpg" alt="Tính toán và kỹ thuật nâng cao">
+                    <img src="../assets/tinh-toan.png" alt="Tính toán và kỹ thuật nâng cao">
                     <div class="group-card-title">
                         <h3>Tính toán và kỹ thuật nâng cao</h3>
                     </div>
@@ -80,6 +80,6 @@
     <!-- Footer -->
     <div id="footer-container"></div>
 
-    <script src="../js/cac-nhom-nghien-cuu.js"></script>
+    <script src="../js/utils.js"></script>
 </body>
 </html>
