Add common stylesheet and update navigation links for faculty pages

--- a/pages/doi-ngu-nhan-su/doi-ngu-nhan-su_kietnv.html
+++ b/pages/doi-ngu-nhan-su/doi-ngu-nhan-su_kietnv.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Trang giới thiệu giảng viên TS. Nguyễn Văn Kiệt - Khoa Khoa học và Kỹ thuật Thông tin, Trường Đại học Công nghệ Thông tin" />
     <title>TS. Nguyễn Văn Kiệt - Giảng viên KHDL</title>
+    <link rel="stylesheet" href="../../styles/components.css" />
     <link rel="stylesheet" href="../../styles/profile.css" />
+    <script src="../../js/utils.js"></script>
 </head>
 
 <body>
@@ -52,7 +54,7 @@
             <h2>Lĩnh vực nghiên cứu</h2>
             <div class="research-carousel">
                 <!-- Nút trái -->
-                <a href="doi-ngu-nhan-su_khoavt.html" class="nav-btn prev-btn">
+                <a href="/giang-vien/khoavt" class="nav-btn prev-btn">
                     <img src="../../assets/left-button-icon.png" alt="Trái" class="nav-icon">
                 </a>
 
@@ -85,7 +87,7 @@
                     </div>
                 </div>
                 <!-- Nút phải -->
-                <a href="doi-ngu-nhan-su_thunta.html" class="nav-btn next-btn">
+                <a href="/giang-vien/thunta" class="nav-btn next-btn">
                     <img src="../../assets/right-button-icon.png" alt="Phải" class="nav-icon">
                 </a>
             </div>
@@ -95,7 +97,7 @@
         <div class="info-wrapper" style="position: relative;">
             <!--nút quay lại trang đnns-->
             <div class="return-left-button">
-                <a href="../gioi-thieu/doi-ngu-nhan-su.html?tab=dataScience">
+                <a href="/doi-ngu-nhan-su?tab=dataScience">
                     <img src="../../assets/return-icon.png" alt="Quay lại">
                 </a>
             </div>
@@ -121,6 +123,5 @@
             </section>
     </main>
     <div id="footer-container"></div>
-    <script src="../../js/main.js"></script>
 </body>
 </html>
