--- a/pages/doi-ngu-nhan-su/doi-ngu-nhan-su_thunta.html
+++ b/pages/doi-ngu-nhan-su/doi-ngu-nhan-su_thunta.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Trang giới thiệu giảng viên ThS. Nguyễn Thị Anh Thư - Khoa Khoa học và Kỹ thuật Thông tin, Trường Đại học Công nghệ Thông tin" />
     <title>ThS. Nguyễn Thị Anh Thư - Giảng viên KHDL</title>
+    <link rel="stylesheet" href="../../styles/components.css" />
     <link rel="stylesheet" href="../../styles/profile.css" />
+    <script src="../../js/utils.js"></script>
 </head>
 
 <body>
@@ -54,7 +56,7 @@
             <h2>Lĩnh vực nghiên cứu</h2>
             <div class="research-carousel">
                 <!-- Nút trái -->
-                <a href="doi-ngu-nhan-su_kietnv.html" class="nav-btn prev-btn">
+                <a href="/giang-vien/kietnv" class="nav-btn prev-btn">
                     <img src="../../assets/left-button-icon.png" alt="Trái" class="nav-icon">
                 </a>
                 <div class="research-grid">
@@ -83,7 +85,7 @@
                     </div>
                 </div>
                 <!-- nút phải -->
-                <a href="doi-ngu-nhan-su_camnt.html" class="nav-btn next-btn">
+                <a href="/giang-vien/camnt" class="nav-btn next-btn">
                     <img src="../../assets/right-button-icon.png" alt="Phải" class="nav-icon">
                 </a>
             </div>
@@ -93,7 +95,7 @@
         <div class="info-wrapper" style="position: relative;">
         <!--nút quay lại trang đnns-->
         <div class="return-left-button">
-            <a href="../gioi-thieu/doi-ngu-nhan-su.html?tab=dataScience">
+            <a href="/doi-ngu-nhan-su?tab=dataScience">
                 <img src="../../assets/return-icon.png" alt="Quay lại">
             </a>
         </div>
@@ -119,6 +121,5 @@
         </section>
     </main>
     <div id="footer-container"></div>
-    <script src="../../js/main.js"></script>
 </body>
 </html>
