Refactor HTML structure and update stylesheet links for consistency across introduction pages

--- a/pages/gioi-thieu/gioi-thieu-chung.html
+++ b/pages/gioi-thieu/gioi-thieu-chung.html
@@ -4,15 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Giới thiệu - Khoa Khoa học và Kỹ thuật Thông tin</title>
-
-    
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
-
-    
+    <link rel="stylesheet" href="../../styles/components.css" />
     <link rel="stylesheet" href="../../styles/gioi-thieu-chung.css" />
 </head>
 
 <body style="font-family: 'Inter', sans-serif;">
+    <div id="header-container"></div>
     <main class="GIOI_THIEU">
         <!-- Banner Giới Thiệu -->
         <section class="banner-gioi-thieu" aria-labelledby="tieu-de-chinh">
@@ -130,5 +128,7 @@
 
 
     </main>
+    <div id="footer-container"></div>
+    <script src="../../js/utils.js"></script>
 </body>
 </html>
