--- a/pages/gioi-thieu/doi-ngu-nhan-su.html
+++ b/pages/gioi-thieu/doi-ngu-nhan-su.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>Đội ngũ nhân sự - Khoa Khoa học và Kỹ thuật Thông tin</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../../styles/components.css">
     <link rel="stylesheet" href="../../styles/doi-ngu-nhan-su.css">
 
 </head>
 <body class="main-body" style="font-family: 'Inter', sans-serif;">
-    <!-- Header -->
+    <div id="header-container"></div>
     <!-- Main Content -->
     <main class="main-content">
         <!-- Page Title Section -->
@@ -21,7 +21,6 @@
             </div>
         </div>
 
-        <!-- Department Tabs Section -->
         <div class="tabs-container">
             <div class="tabs-wrapper">
                 <div class="tabs-buttons">
@@ -36,7 +35,7 @@
             <!-- Data Science Department -->
             <div id="dataScience" class="staff-grid">
                 <!-- Row 1 -->
-                <a href="../doi-ngu-nhan-su/doi-ngu-nhan-su_kietnv.html" class="staff-card-link">
+                <a href="/giang-vien/kietnv" class="staff-card-link">
                     <div class="staff-card">
                         <div class="staff-image-container">
                             <img src="../../assets/doi-ngu-nhan-su-kietnv.jpg" alt="TS. Nguyễn Văn Kiệt" class="staff-image">
@@ -68,7 +67,7 @@
                     </div>
                 </div>
 
-                <a href="../doi-ngu-nhan-su/doi-ngu-nhan-su_thunta.html" class="staff-card-link">
+                <a href="/giang-vien/thunta" class="staff-card-link">
                     <div class="staff-card">
                         <div class="staff-image-container">
                             <img src="../../assets/doi-ngu-nhan-su-thunta.jpg" alt="ThS. Nguyễn Thị Anh Thư" class="staff-image">
@@ -189,7 +188,7 @@
             <!-- Mobile & Web Technology Department -->
             <div id="mobileWeb" class="staff-grid hidden">
                 <!-- Row 1 -->
-                <a href="../doi-ngu-nhan-su/doi-ngu-nhan-su_camnt.html" class="staff-card-link">
+                <a href="/giang-vien/camnt" class="staff-card-link">
                     <div class="staff-card">
                         <div class="staff-image-container">
                             <img src="../../assets/doi-ngu-nhan-su-camnt.png" alt="TS. Nguyễn Tấn Cầm" class="staff-image">
@@ -233,7 +232,7 @@
                 </div>
 
                 <!-- Row 3 -->
-                <a href="../doi-ngu-nhan-su/doi-ngu-nhan-su_khoavt.html" class="staff-card-link">
+                <a href="/giang-vien/khoavt" class="staff-card-link">
                     <div class="staff-card">
                         <div class="staff-image-container">
                             <img src="../../assets/doi-ngu-nhan-su-khoavt.jpg" alt="ThS. Võ Tấn Khoa" class="staff-image">
@@ -258,8 +257,9 @@
         </div>
     </main>
 
-    <!-- Footer -->
+    <div id="footer-container"></div>
 
+    <script src="../../js/utils.js"></script>
     <script src="../../js/gioi-thieu.js"></script>
 </body>
 </html>
