Add news pages and update routing in the custom HTTP server

--- a/pages/tin-tuc/tin-hoc-vu.html
+++ b/pages/tin-tuc/tin-hoc-vu.html
@@ -7,15 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Gelasio:700,600|Inter:300,400,500|Inknut+Antiqua:600,800" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/components.css">
-    <link rel="stylesheet" href="../styles/tin-tuc.css">
-    <script src="../js/utils.js"></script>
+    <link rel="stylesheet" href="../../styles/components.css">
+    <link rel="stylesheet" href="../../styles/tin-tuc.css">
+    <script src="../../js/utils.js"></script>
 </head>
 <body>
 <div id="header-container"></div>
 <!-- Thân Tin tức -->
  <div class="decorate-picture">
-    <img src="../assets/news-banner-picture.jpg" style="max-width: 100%; width: 1320px; height: auto; max-height: 380px; align-self: stretch; border-radius: 32px; margin: 12px 80px 0 80px; display: block;">
+    <img src="../../assets/news-banner-picture.jpg" style="max-width: 100%; width: 1320px; height: auto; max-height: 380px; align-self: stretch; border-radius: 32px; margin: 12px 80px 0 80px; display: block;">
  </div>
  <div class="page-caption">
     <h1>TIN HỌC VỤ</h1>
@@ -29,21 +29,21 @@
     </div>
     <div class="news-list">
         <div class="overlay-caption">
-            <img class="Illustrator-pic" src="../assets/news-decorate-picture-0.jpg">
+            <img class="Illustrator-pic" src="../../assets/news-decorate-picture-0.jpg">
             <a>Hướng dẫn sinh viên thực hiện đồ án</a>
         </div>
         <div class="side-picture-caption">
             <div class="flex-caption">
                 <a>Thu thập thông tin NCKH và Bài báo Khoa học SV_HV cao học</a>
-                <img src="../assets/news-decorate-picture-1.jpg">
+                <img src="../../assets/news-decorate-picture-1.jpg">
             </div>
             <div class="flex-caption">
                 <a>Kế hoạch thực hiện KLTN_Học kỳ I_NH 2023 - 2024</a>
-                <img src="../assets/news-decorate-picture-2.jpg">
+                <img src="../../assets/news-decorate-picture-2.jpg">
             </div>
             <div class="flex-caption">
                 <a>Thông báo tiếp nhận đơn xin cứu xét các trường hợp xử lý học vụ học kỳ 1 năm học 2023-2024</a>
-                <img src="../assets/news-decorate-picture-3.jpg">
+                <img src="../../assets/news-decorate-picture-3.jpg">
             </div>
         </div>
     </div>
@@ -55,19 +55,19 @@
     </div>
     <div class="news-flex">
         <div class="flex-box">
-            <img src="../assets/news-decorate-picture-4.jpg">
+            <img src="../../assets/news-decorate-picture-4.jpg">
             <a>Thời khóa biểu học phần 3 HK2 năm học 2024-2025 của Lớp Liên thông chính quy khóa tuyển năm 2024</a>
         </div>
         <div class="flex-box">
-            <img src="../assets/news-decorate-picture-1.jpg">
+            <img src="../../assets/news-decorate-picture-1.jpg">
             <a>Thời khóa biểu học phần 2 HK1 năm học 2024-2025 của Lớp Liên thông chính quy khóa tuyển năm 2024</a>
         </div>
         <div class="flex-box">
-            <img src="../assets/news-decorate-picture-2.jpg">
+            <img src="../../assets/news-decorate-picture-2.jpg">
             <a>Thời khóa biểu học phần 4 HK1 năm học 2024-2025 của Lớp Liên thông chính quy khóa tuyển năm 2023</a>
         </div>
         <div class="flex-box">
-            <img src="../assets/news-decorate-picture-3.jpg">
+            <img src="../../assets/news-decorate-picture-3.jpg">
             <a>Thời khóa biểu của Lớp Liên thông chính quy khóa tuyển năm 2024</a>
         </div>
     </div>
@@ -79,21 +79,21 @@
     </div>
     <div class="news-list">
         <div class="overlay-caption">
-            <img class="Illustrator-pic" src="../assets/news-decorate-picture-0.jpg">
+            <img class="Illustrator-pic" src="../../assets/news-decorate-picture-0.jpg">
             <a>Hình ảnh lễ tốt nghiệp tháng 9 năm 2022</a>
         </div>
         <div class="side-picture-caption">
             <div class="flex-caption">
                 <a>Thời khóa biểu các lớp Văn bằng 2 Khóa 2020, 2021</a>
-                <img src="../assets/news-decorate-picture-3.jpg">
+                <img src="../../assets/news-decorate-picture-3.jpg">
             </div>
             <div class="flex-caption">
                 <a>[Lễ tốt nghiệp đợt 1 năm 2023] - Kế hoạch tổ chức</a>
-                <img src="../assets/news-decorate-picture-2.jpg">
+                <img src="../../assets/news-decorate-picture-2.jpg">
             </div>
             <div class="flex-caption">
                 <a>Thời khóa biểu học phần 5, Học kỳ 2 năm học 2022 - 2023 của lớp Liên thông</a>
-                <img src="../assets/news-decorate-picture-1.jpg">
+                <img src="../../assets/news-decorate-picture-1.jpg">
             </div>
         </div>
     </div>
@@ -105,19 +105,19 @@
     </div>
     <div class="news-flex">
         <div class="flex-box">
-            <img src="../assets/news-decorate-picture-1.jpg">
+            <img src="../../assets/news-decorate-picture-1.jpg">
             <a>Xếp hạng tạp chí và tính điểm bài báo - Một giải pháp nâng cao chất lượng công bố</a>
         </div>
         <div class="flex-box">
-            <img src="../assets/news-decorate-picture-4.jpg">
+            <img src="../../assets/news-decorate-picture-4.jpg">
             <a>Cấu trúc tóm tắt của một đề cương nghiên cứu luận án tiến sĩ</a>
         </div>
         <div class="flex-box">
-            <img src="../assets/news-decorate-picture-2.jpg">
+            <img src="../../assets/news-decorate-picture-2.jpg">
             <a>Bảo vệ Chuyên đề Tiến sĩ thứ 02 của NCS. Nguyễn Tấn Cầm</a>
         </div>
         <div class="flex-box">
-            <img src="../assets/news-decorate-picture-3.jpg">
+            <img src="../../assets/news-decorate-picture-3.jpg">
             <a>Tin sinh học: Chưa khai thác hết tiềm năng</a>
         </div>
     </div>
@@ -134,11 +134,10 @@
 <div class="news-nav">
     <h2>TIẾP TỤC XEM VỚI...</h2>
     <div class="news-nav-flex">
-        <a class="news-nav-item" href="../tin_tuc/tintotnghiep.html">Tin tốt nghiệp</a>
-        <a class="news-nav-item active" href="../tin_tuc/tinhocvu.html">Tin học vụ</a>
-        <a class="news-nav-item" href="../tin_tuc/tintuyendung.html">Tin tuyển dụng</a>
-        <a class="news-nav-item" href="../tin_tuc/tinkhcn.html">Tin <abrr title="Khoa học - Công nghệ">KHCN</abrr></a>
-        <a class="news-nav-item" href="">Tin khác</a>
+        <a class="news-nav-item active" href="/tin-tuc/tin-hoc-vu">Tin học vụ</a>
+        <a class="news-nav-item" href="/tin-tuc/tin-tot-nghiep">Tin tốt nghiệp</a>
+        <a class="news-nav-item" href="/tin-tuc/tin-tuyen-dung">Tin tuyển dụng</a>
+        <a class="news-nav-item" href="/tin-tuc/tin-khoa-hoc-cong-nghe">Tin Khoa học - Công nghệ</a>
     </div>
 </div>
 <div id="footer-container"></div>
