--- a/pages/tin-tuc/tin-khoa-hoc-cong-nghe.html
+++ b/pages/tin-tuc/tin-khoa-hoc-cong-nghe.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 <head>
     <meta charset="utf-8">
-    <title>Trang chủ Khoa Khoa học và Kỹ thuật thông tin</title>
-    <link rel="stylesheet" href="../styles/tin_tuc.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Tin Khoa học - Công nghệ - Khoa Khoa học và Kỹ thuật thông tin</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Gelasio:700,600|Inter:300,400,500|Inknut+Antiqua:600,800" rel="stylesheet">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="../../styles/components.css">
+    <link rel="stylesheet" href="../../styles/tin-tuc.css">
+    <script src="../../js/utils.js"></script>
 </head>
 <body>
+<div id="header-container"></div>
 <div>
     <img src="banner-picture-news.jpg" class="decorate-picture"> 
  </div>
@@ -52,11 +54,11 @@
 <div class="news-nav">
     <h2>TIẾP TỤC XEM VỚI...</h2>
     <div class="news-nav-flex">
-        <a class="news-nav-item" href="../tin_tuc/tintotnghiep.html">Tin tốt nghiệp</a>
-        <a class="news-nav-item" href="../tin_tuc/tinhocvu.html">Tin học vụ</a>
-        <a class="news-nav-item" href="../tin_tuc/tintuyendung.html">Tin tuyển dụng</a>
-        <a class="news-nav-item active" href="../tin_tuc/tinkhcn.html">Tin <abrr title="Khoa học - Công nghệ">KHCN</abrr></a>
-        <a class="news-nav-item" href="">Tin khác</a>
+        <a class="news-nav-item" href="/tin-tuc/tin-hoc-vu">Tin học vụ</a>
+        <a class="news-nav-item" href="/tin-tuc/tin-tot-nghiep">Tin tốt nghiệp</a>
+        <a class="news-nav-item" href="/tin-tuc/tin-tuyen-dung">Tin tuyển dụng</a>
+        <a class="news-nav-item active" href="/tin-tuc/tin-khoa-hoc-cong-nghe">Tin Khoa học - Công nghệ</a>
     </div>
 </div>
+<div id="footer-container"></div>
 </body>
