--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=/pages/home.html">
+    <meta http-equiv="refresh" content="0; url=/ISE_Web/pages/home.html">
     <title>Redirecting...</title>
 </head>
 <body>
     <p>Đang chuyển hướng...</p>
     <script>
-        window.location.href = '/pages/home.html';
+        window.location.href = '/ISE_Web/pages/home.html';
     </script>
 </body>
 </html>
