Convert all relative paths to absolute paths for GitHub Pages deployment

--- a/pages/cong-bo-khoa-hoc.html
+++ b/pages/cong-bo-khoa-hoc.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Công bố khoa học - Khoa Khoa học và Kỹ thuật Thông tin</title>
-    <link rel="stylesheet" href="../styles/components.css">
-    <link rel="stylesheet" href="../styles/cong-bo-khoa-hoc.css">
+    <link rel="stylesheet" href="/ISE_Web/styles/components.css">
+    <link rel="stylesheet" href="/ISE_Web/styles/cong-bo-khoa-hoc.css">
 </head>
 <body>
     <div id="header-container"></div>
@@ -104,7 +104,7 @@
 
     <div id="footer-container"></div>
 
-    <script src="../js/utils.js"></script>
-    <script src="../js/cong-bo-khoa-hoc.js"></script>
+    <script src="/ISE_Web/js/utils.js"></script>
+    <script src="/ISE_Web/js/cong-bo-khoa-hoc.js"></script>
 </body>
 </html>
