--- a/pages/dao-tao.html
+++ b/pages/dao-tao.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Đào tạo - Khoa Khoa học và kỹ thuật thông tin</title>
-    <link rel="stylesheet" href="../styles/components.css" />
-    <link rel="stylesheet" href="../styles/daotao.css" />
-    <script src="../js/utils.js"></script>
-    <script src="../js/dao-tao.js" defer></script>
+    <link rel="stylesheet" href="/ISE_Web/styles/components.css" />
+    <link rel="stylesheet" href="/ISE_Web/styles/daotao.css" />
+    <script src="/ISE_Web/js/utils.js"></script>
+    <script src="/ISE_Web/js/dao-tao.js" defer></script>
 </head>
 <body>
     
@@ -81,7 +81,7 @@
                 <div id="cntt-bachelor" class="sub-program-content">
                     <!-- Banner -->
                     <div>
-                        <img class="banner-image" src="../assets/daotao_cntt_1.jpg" alt="Cử nhân Công nghệ Thông tin">
+                        <img class="banner-image" src="/ISE_Web/assets/daotao_cntt_1.jpg" alt="Cử nhân Công nghệ Thông tin">
                         <div class="banner-overlay">
                             <h2 class="banner-title">Cử nhân<br>Công nghệ Thông tin</h2>
                         </div>
@@ -134,7 +134,7 @@
                         </p>
                         <p class="section-content"> Chương trình được thiết kế, xây dựng dựa vào tầm nhìn và sứ mệnh nhà trường; phiếu góp ý của doanh nghiệp, sinh viên tốt nghiệp, giảng viên giảng dạy và tài liệu tham khảo chính là Chương trình đào tạo Đại học về Công nghệ Thông tin của ACM (Association for Computing Machinery) và IEEE Computer Society ấn hành.</p>
 
-                        <img src="../assets/mo_ta_cntt.png" alt="Mục tiêu đào tạo CNTT" class="content-image"/>
+                        <img src="/ISE_Web/assets/mo_ta_cntt.png" alt="Mục tiêu đào tạo CNTT" class="content-image"/>
                         <p class="image-caption" >Hình 1. Mô tả ngành Công nghệ Thông tin</p>
 
                         <h3 class="section-title" >Hình thức và thời gian đào tạo</h3>
@@ -281,7 +281,7 @@
                             </table>
                         </div>
                         <h3 class="section-title">Khung chương trình đào tạo (Áp dụng từ Khoá 19 - 2024)</h3>
-                        <img src="../assets/khung_ctdt_cntt.png" alt="Khung chương trình đào tạo CNTT" class="content-image"/>
+                        <img src="/ISE_Web/assets/khung_ctdt_cntt.png" alt="Khung chương trình đào tạo CNTT" class="content-image"/>
                         <p class="image-caption" >Hình 2. Khung chương trình đào tạo ngành Công nghệ Thông tin</p>
                     </div>
                 </div>
@@ -290,7 +290,7 @@
                 <div id="cnnb-bachelor" class="sub-program-content hidden">
                     <!-- Banner -->
                     <div>
-                        <img class="banner-image" src="../assets/bannerctvietnhat2.png" alt="Cử nhân CNTT Việt-Nhật">
+                        <img class="banner-image" src="/ISE_Web/assets/bannerctvietnhat2.png" alt="Cử nhân CNTT Việt-Nhật">
                     </div>
 
                     <!-- Program Information -->
@@ -387,7 +387,7 @@
                 <div id="khdl-bachelor" class="sub-program-content hidden">
                     <!-- Banner -->
                     <div>
-                        <img class="banner-image" src="../assets/daotao_khdl_1.jpg" alt="Cử nhân Khoa học Dữ liệu">
+                        <img class="banner-image" src="/ISE_Web/assets/daotao_khdl_1.jpg" alt="Cử nhân Khoa học Dữ liệu">
                         <div class="banner-overlay">
                             <h2 class="banner-title">Cử nhân<br>Khoa học Dữ liệu</h2>
                         </div>
@@ -502,7 +502,7 @@
             <div id="master-content" class="program-content">
                 <!-- Banner -->
                 <div>
-                    <img  class="banner-image" src="../assets/master-banner.jpg" alt="Chương trình Thạc sĩ">
+                    <img  class="banner-image" src="/ISE_Web/assets/master-banner.jpg" alt="Chương trình Thạc sĩ">
                     <div class="banner-overlay">
                         <h2 class="banner-title" id="master-banner-title">Thạc sĩ<br>Công nghệ Thông tin</h2>
                     </div>
@@ -1455,7 +1455,7 @@
             <div id="phd-content" class="program-content hidden">
                 <!-- Banner -->
                 <div>
-                    <img class="banner-image" src="../assets/phd-banner.png" alt="Chương trình Tiến sĩ">
+                    <img class="banner-image" src="/ISE_Web/assets/phd-banner.png" alt="Chương trình Tiến sĩ">
                     <div class="banner-overlay">
                         <h2 class="banner-title" id="phd-banner-title">Tiến sĩ<br>Công nghệ Thông tin</h2>
                     </div>
