--- a/pages/doi-ngu-nhan-su/doi-ngu-nhan-su_camnt.html
+++ b/pages/doi-ngu-nhan-su/doi-ngu-nhan-su_camnt.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Trang giới thiệu giảng viên TS. Nguyễn Tấn Cầm - Khoa Khoa học và Kỹ thuật Thông tin, Trường Đại học Công nghệ Thông tin" />
     <title>TS. Nguyễn Tấn Cầm - Giảng viên Thiết bị di động và ứng dụng Web</title>
-    <link rel="stylesheet" href="../../styles/components.css" />
-    <link rel="stylesheet" href="../../styles/profile.css" />
-    <script src="../../js/utils.js"></script>
+    <link rel="stylesheet" href="/ISE_Web/styles/components.css" />
+    <link rel="stylesheet" href="/ISE_Web/styles/profile.css" />
+    <script src="/ISE_Web/js/utils.js"></script>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <section class="profile-intro profile-card">
             <div class="profile-card-inner">
                 <!-- Cột ảnh -->
-                <img src="../../assets/doi-ngu-nhan-su-camnt.png" alt="Ảnh giảng viên TS. Nguyễn Tấn Cầm" class="profile-image" />
+                <img src="/ISE_Web/assets/doi-ngu-nhan-su-camnt.png" alt="Ảnh giảng viên TS. Nguyễn Tấn Cầm" class="profile-image" />
 
                 <!-- Cột thông tin -->
                 <div class="profile-info">
@@ -27,13 +27,13 @@
                     <p class="profile-university">Trường Đại học Công nghệ Thông tin – ĐHQG-HCM</p>
                     <p>
                         <a href="mailto:camnt@uit.edu.vn" class="contact-email">
-                            <img src="../../assets/letter-icon.png" alt="Email icon" class="contact-icon" />
+                            <img src="/ISE_Web/assets/letter-icon.png" alt="Email icon" class="contact-icon" />
                             kietnv@uit.edu.vn
                         </a>
                     </p>
                     <p>
                         <a href="tel:+842837252002" class="contact-phone">
-                            <img src="../../assets/phone-icon.png" alt="Phone icon" class="contact-icon" />
+                            <img src="/ISE_Web/assets/phone-icon.png" alt="Phone icon" class="contact-icon" />
                             +84 28 3725 2002
                         </a>
                     </p>
@@ -55,12 +55,12 @@
             <div class="research-carousel">
                 <!-- Nút trái -->
                 <a href="/giang-vien/thunta" class="nav-btn prev-btn">
-                    <img src="../../assets/left-button-icon.png" alt="Trái" class="nav-icon">
+                    <img src="/ISE_Web/assets/left-button-icon.png" alt="Trái" class="nav-icon">
                 </a>
                 <div class="research-grid">
                     <div class="research-item">
                         <h3>
-                            <img class="research-icon" src="../../assets/security-icon.png" alt="Icon Security" />
+                            <img class="research-icon" src="/ISE_Web/assets/security-icon.png" alt="Icon Security" />
                             Privacy and Security
                         </h3>
                         <p>Bảo mật và quyền riêng tư trong các thiết bị di động, IoT, và mạng máy tính, phát hiện và phân loại mã độc trên Adroid.</p>
@@ -68,7 +68,7 @@
 
                     <div class="research-item">
                         <h3>
-                            <img class="research-icon" src="../../assets/mobile-icon.png" alt="Icon Mobile" />
+                            <img class="research-icon" src="/ISE_Web/assets/mobile-icon.png" alt="Icon Mobile" />
                             Mobile Forensic
                         </h3>
                         <p>Điều tra số trên thiết bị di động, dùng để thu thập, bảo toàn, phân tích và trình bày dữ liệu từ điện thoại di động để hỗ trợ điều tra, an ninh mạng,...</p>
@@ -76,7 +76,7 @@
 
                     <div class="research-item">
                         <h3>
-                            <img class="research-icon" src="../../assets/chain-icon.png" alt="Icon Chain" />
+                            <img class="research-icon" src="/ISE_Web/assets/chain-icon.png" alt="Icon Chain" />
                             Blockchain
                         </h3>
                         <p>Đặc biệt ứng dụng trong đảm bảo an ninh thông tin, đảm bảo tính bảo mật, toàn vẹn và tin cậy của thông tin.</p>
@@ -84,7 +84,7 @@
                 </div>
                 <!-- Nút phải -->
                 <a href="/giang-vien/khoavt" class="nav-btn next-btn">
-                    <img src="../../assets/right-button-icon.png" alt="Phải" class="nav-icon">
+                    <img src="/ISE_Web/assets/right-button-icon.png" alt="Phải" class="nav-icon">
                 </a>
             </div>
         </section>
@@ -93,7 +93,7 @@
         <div class="info-wrapper" style="position: relative;">  <!--nút quay lại trang đnns-->
             <div class="return-left-button">
                 <a href="/doi-ngu-nhan-su?tab=mobileWeb">
-                    <img src="../../assets/return-icon.png" alt="Quay lại">
+                    <img src="/ISE_Web/assets/return-icon.png" alt="Quay lại">
                 </a>
             </div>
 
