--- a/pages/gioi-thieu/gioi-thieu-chung.html
+++ b/pages/gioi-thieu/gioi-thieu-chung.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Giới thiệu - Khoa Khoa học và Kỹ thuật Thông tin</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="../../styles/components.css" />
-    <link rel="stylesheet" href="../../styles/gioi-thieu-chung.css" />
+    <link rel="stylesheet" href="/ISE_Web/styles/components.css" />
+    <link rel="stylesheet" href="/ISE_Web/styles/gioi-thieu-chung.css" />
 </head>
 
 <body style="font-family: 'Inter', sans-serif;">
@@ -15,7 +15,7 @@
         <!-- Banner Giới Thiệu -->
         <section class="banner-gioi-thieu" aria-labelledby="tieu-de-chinh">
             <img class="banner-img"
-                 src="../../assets/introduction-banner-picture.png"
+                 src="/ISE_Web/assets/introduction-banner-picture.png"
                  alt="Hình ảnh tòa nhà Trường Đại học Công nghệ Thông tin" />
             <h1 class="tieu-de-chinh" id="tieu-de-chinh">
                 <span class="dong-1">GIỚI THIỆU <br /></span>
@@ -129,6 +129,6 @@
 
     </main>
     <div id="footer-container"></div>
-    <script src="../../js/utils.js"></script>
+    <script src="/ISE_Web/js/utils.js"></script>
 </body>
 </html>
