--- a/pages/home.html
+++ b/pages/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang chủ - Khoa Khoa học và Kỹ thuật Thông tin</title>
     <!-- Import CSS chung từ components -->
-    <link rel="stylesheet" href="../styles/components.css">
+    <link rel="stylesheet" href="/ISE_Web/styles/components.css">
     <style>
         /* ===== RESET & GLOBALS ===== */
         * {
@@ -311,6 +311,6 @@
     <!-- Footer -->
     <div id="footer-container"></div>
 
-    <script src="../js/utils.js"></script>
+    <script src="/ISE_Web/js/utils.js"></script>
 </body>
 </html>
