--- a/pages/cac-nhom-nghien-cuu.html
+++ b/pages/cac-nhom-nghien-cuu.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Các nhóm nghiên cứu - Khoa Khoa học và Kỹ thuật Thông tin</title>
-    <link rel="stylesheet" href="../styles/components.css" />
-    <link rel="stylesheet" href="../styles/cac-nhom-nghien-cuu.css" />
+    <link rel="stylesheet" href="/ISE_Web/styles/components.css" />
+    <link rel="stylesheet" href="/ISE_Web/styles/cac-nhom-nghien-cuu.css" />
 </head>
 <body>
     <!-- Header -->
@@ -20,7 +20,7 @@
         <section class="research-groups">
             <a href="nhom-nghien-cuu/khoa-hoc-du-lieu" class="group-card-link">
                 <div class="group-card">
-                    <img src="../assets/khoa-hoc-du-lieu.png" alt="Khoa học dữ liệu và Trí tuệ nhân tạo">
+                    <img src="/ISE_Web/assets/khoa-hoc-du-lieu.png" alt="Khoa học dữ liệu và Trí tuệ nhân tạo">
                     <div class="group-card-title">
                         <h3>Khoa học dữ liệu và Trí tuệ nhân tạo</h3>
                     </div>
@@ -28,7 +28,7 @@
             </a>
             <a href="nhom-nghien-cuu/xu-ly-du-lieu" class="group-card-link">
                 <div class="group-card">
-                    <img src="../assets/xu-ly-du-lieu.png" alt="Xử lý dữ liệu, tín hiệu và hình ảnh">
+                    <img src="/ISE_Web/assets/xu-ly-du-lieu.png" alt="Xử lý dữ liệu, tín hiệu và hình ảnh">
                     <div class="group-card-title">
                         <h3>Xử lý dữ liệu, tín hiệu và hình ảnh</h3>
                     </div>
@@ -36,7 +36,7 @@
             </a>
             <a href="nhom-nghien-cuu/xu-ly-ngon-ngu" class="group-card-link">
                 <div class="group-card">
-                    <img src="../assets/nlp.png" alt="Xử lý ngôn ngữ tự nhiên">
+                    <img src="/ISE_Web/assets/nlp.png" alt="Xử lý ngôn ngữ tự nhiên">
                     <div class="group-card-title">
                         <h3>Xử lý ngôn ngữ tự nhiên</h3>
                     </div>
@@ -44,7 +44,7 @@
             </a>
             <a href="nhom-nghien-cuu/phat-trien-he-thong" class="group-card-link">
                 <div class="group-card">
-                    <img src="../assets/phat-trien-he-thong.png" alt="Phát triển hệ thống và ứng dụng">
+                    <img src="/ISE_Web/assets/phat-trien-he-thong.png" alt="Phát triển hệ thống và ứng dụng">
                     <div class="group-card-title">
                         <h3>Phát triển hệ thống và ứng dụng</h3>
                     </div>
@@ -52,7 +52,7 @@
             </a>
             <a href="nhom-nghien-cuu/bao-mat-blockchain-iot" class="group-card-link">
                 <div class="group-card">
-                    <img src="../assets/bao-mat-blockchain.png" alt="Bảo mật, Blockchain và IoT">
+                    <img src="/ISE_Web/assets/bao-mat-blockchain.png" alt="Bảo mật, Blockchain và IoT">
                     <div class="group-card-title">
                         <h3>Bảo mật, Blockchain và IoT</h3>
                     </div>
@@ -60,7 +60,7 @@
             </a>
             <a href="nhom-nghien-cuu/khoa-hoc-thong-tin-dia-ly" class="group-card-link">
                 <div class="group-card">
-                    <img src="../assets/khoa-hoc-thong-tin-dia-ly.png" alt="Khoa học thông tin địa lý">
+                    <img src="/ISE_Web/assets/khoa-hoc-thong-tin-dia-ly.png" alt="Khoa học thông tin địa lý">
                     <div class="group-card-title">
                         <h3>Khoa học thông tin địa lý</h3>
                     </div>
@@ -68,7 +68,7 @@
             </a>
              <a href="nhom-nghien-cuu/tinh-toan-ky-thuat-nang-cao" class="group-card-link">
                 <div class="group-card">
-                    <img src="../assets/tinh-toan.png" alt="Tính toán và kỹ thuật nâng cao">
+                    <img src="/ISE_Web/assets/tinh-toan.png" alt="Tính toán và kỹ thuật nâng cao">
                     <div class="group-card-title">
                         <h3>Tính toán và kỹ thuật nâng cao</h3>
                     </div>
@@ -80,6 +80,6 @@
     <!-- Footer -->
     <div id="footer-container"></div>
 
-    <script src="../js/utils.js"></script>
+    <script src="/ISE_Web/js/utils.js"></script>
 </body>
 </html>
