--- a/pages/lien-he.html
+++ b/pages/lien-he.html
@@ -10,8 +10,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../styles/components.css"> 
-  <link rel="stylesheet" href="../styles/lien-he.css">
+  <link rel="stylesheet" href="/ISE_Web/styles/components.css"> 
+  <link rel="stylesheet" href="/ISE_Web/styles/lien-he.css">
 </head>
 
 <body>
@@ -97,7 +97,7 @@
   </div>
   <!-- Footer Placeholder -->
       <div id="footer-container"></div>
-      <script src="../js/utils.js"></script>
+      <script src="/ISE_Web/js/utils.js"></script>
 
 </body>
 
