--- a/pages/nhom-nghien-cuu/khoa-hoc-du-lieu.html
+++ b/pages/nhom-nghien-cuu/khoa-hoc-du-lieu.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khoa học dữ liệu và Trí tuệ nhân tạo - Khoa Khoa học và Kỹ thuật Thông tin</title>
-    <link rel="stylesheet" href="../../styles/components.css" />
-    <link rel="stylesheet" href="../../styles/nhom-nghien-cuu.css" />
+    <link rel="stylesheet" href="/ISE_Web/styles/components.css" />
+    <link rel="stylesheet" href="/ISE_Web/styles/nhom-nghien-cuu.css" />
 </head>
 <body>
     <!-- Header -->
@@ -17,7 +17,7 @@
         </header>
 
         <section class="page-content">
-            <img src="../../assets/khoa-hoc-du-lieu.png" alt="Khoa học dữ liệu và Trí tuệ nhân tạo" class="main-image">
+            <img src="/ISE_Web/assets/khoa-hoc-du-lieu.png" alt="Khoa học dữ liệu và Trí tuệ nhân tạo" class="main-image">
 
             <div class="research-directions">
                 <h2>Hướng nghiên cứu</h2>
@@ -72,6 +72,6 @@
     <!-- Footer -->
     <div id="footer-container"></div>
 
-    <script src="../../js/utils.js"></script>
+    <script src="/ISE_Web/js/utils.js"></script>
 </body>
 </html>
