--- a/pages/nhom-nghien-cuu/tinh-toan-ky-thuat-nang-cao.html
+++ b/pages/nhom-nghien-cuu/tinh-toan-ky-thuat-nang-cao.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tính toán và kỹ thuật nâng cao - Khoa Khoa học và Kỹ thuật Thông tin</title>
-    <link rel="stylesheet" href="../../styles/components.css" />
-    <link rel="stylesheet" href="../../styles/nhom-nghien-cuu.css" />
+    <link rel="stylesheet" href="/ISE_Web/styles/components.css" />
+    <link rel="stylesheet" href="/ISE_Web/styles/nhom-nghien-cuu.css" />
 </head>
 <body>
     <!-- Header -->
@@ -17,7 +17,7 @@
         </header>
 
         <section class="page-content">
-            <img src="../../assets/tinh-toan.png" alt="Tính toán và kỹ thuật nâng cao" class="main-image">
+            <img src="/ISE_Web/assets/tinh-toan.png" alt="Tính toán và kỹ thuật nâng cao" class="main-image">
 
             <div class="research-directions">
                 <h2>Hướng nghiên cứu</h2>
@@ -67,6 +67,6 @@
     <!-- Footer -->
     <div id="footer-container"></div>
 
-    <script src="../../js/utils.js"></script>
+    <script src="/ISE_Web/js/utils.js"></script>
 </body>
 </html>
