--- a/pages/tin_tuc/tintuyendung.html
+++ b/pages/tin_tuc/tintuyendung.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Trang chủ Khoa Khoa học và Kỹ thuật thông tin</title>
-    <link rel="stylesheet" href="../styles/tin_tuc.css">
+    <link rel="stylesheet" href="/ISE_Web/styles/tin_tuc.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
