--- a/pages/gioi-thieu/doi-ngu-nhan-su.html
+++ b/pages/gioi-thieu/doi-ngu-nhan-su.html
@@ -35,7 +35,7 @@
             <!-- Data Science Department -->
             <div id="dataScience" class="staff-grid">
                 <!-- Row 1 -->
-                <a href="/giang-vien/kietnv" class="staff-card-link">
+                <a href="/ISE_Web/giang-vien/kietnv" class="staff-card-link">
                     <div class="staff-card">
                         <div class="staff-image-container">
                             <img src="/ISE_Web/assets/doi-ngu-nhan-su-kietnv.jpg" alt="TS. Nguyễn Văn Kiệt" class="staff-image">
@@ -67,7 +67,7 @@
                     </div>
                 </div>
 
-                <a href="/giang-vien/thunta" class="staff-card-link">
+                <a href="/ISE_Web/giang-vien/thunta" class="staff-card-link">
                     <div class="staff-card">
                         <div class="staff-image-container">
                             <img src="/ISE_Web/assets/doi-ngu-nhan-su-thunta.jpg" alt="ThS. Nguyễn Thị Anh Thư" class="staff-image">
@@ -188,7 +188,7 @@
             <!-- Mobile & Web Technology Department -->
             <div id="mobileWeb" class="staff-grid hidden">
                 <!-- Row 1 -->
-                <a href="/giang-vien/camnt" class="staff-card-link">
+                <a href="/ISE_Web/giang-vien/camnt" class="staff-card-link">
                     <div class="staff-card">
                         <div class="staff-image-container">
                             <img src="/ISE_Web/assets/doi-ngu-nhan-su-camnt.png" alt="TS. Nguyễn Tấn Cầm" class="staff-image">
@@ -232,7 +232,7 @@
                 </div>
 
                 <!-- Row 3 -->
-                <a href="/giang-vien/khoavt" class="staff-card-link">
+                <a href="/ISE_Web/giang-vien/khoavt" class="staff-card-link">
                     <div class="staff-card">
                         <div class="staff-image-container">
                             <img src="/ISE_Web/assets/doi-ngu-nhan-su-khoavt.jpg" alt="ThS. Võ Tấn Khoa" class="staff-image">
