--- a/pages/doi-ngu-nhan-su/doi-ngu-nhan-su_camnt.html
+++ b/pages/doi-ngu-nhan-su/doi-ngu-nhan-su_camnt.html
@@ -54,7 +54,7 @@
             <h2>Lĩnh vực nghiên cứu</h2>
             <div class="research-carousel">
                 <!-- Nút trái -->
-                <a href="/giang-vien/thunta" class="nav-btn prev-btn">
+                <a href="/ISE_Web/giang-vien/thunta" class="nav-btn prev-btn">
                     <img src="/ISE_Web/assets/left-button-icon.png" alt="Trái" class="nav-icon">
                 </a>
                 <div class="research-grid">
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <!-- Nút phải -->
-                <a href="/giang-vien/khoavt" class="nav-btn next-btn">
+                <a href="/ISE_Web/giang-vien/khoavt" class="nav-btn next-btn">
                     <img src="/ISE_Web/assets/right-button-icon.png" alt="Phải" class="nav-icon">
                 </a>
             </div>
@@ -92,7 +92,7 @@
         <!-- Công trình khoa học -->
         <div class="info-wrapper" style="position: relative;">  <!--nút quay lại trang đnns-->
             <div class="return-left-button">
-                <a href="/doi-ngu-nhan-su?tab=mobileWeb">
+                <a href="/ISE_Web/doi-ngu-nhan-su?tab=mobileWeb">
                     <img src="/ISE_Web/assets/return-icon.png" alt="Quay lại">
                 </a>
             </div>
