--- a/pages/doi-ngu-nhan-su/doi-ngu-nhan-su_khoavt.html
+++ b/pages/doi-ngu-nhan-su/doi-ngu-nhan-su_khoavt.html
@@ -58,7 +58,7 @@
             <h2>Lĩnh vực nghiên cứu</h2>
             <div class="research-carousel">
                 <!-- Nút trái -->
-                <a href="/giang-vien/camnt" class="nav-btn prev-btn">
+                <a href="/ISE_Web/giang-vien/camnt" class="nav-btn prev-btn">
                     <img src="/ISE_Web/assets/left-button-icon.png" alt="Trái" class="nav-icon">
                 </a>
                 <div class="research-grid">
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <!-- nút phải -->
-                <a href="/giang-vien/kietnv" class="nav-btn next-btn">
+                <a href="/ISE_Web/giang-vien/kietnv" class="nav-btn next-btn">
                     <img src="/ISE_Web/assets/right-button-icon.png" alt="Phải" class="nav-icon">
                 </a>
             </div>
@@ -100,7 +100,7 @@
         <div class="info-wrapper" style="position: relative;">
             <!--nút quay lại trang đnns-->
             <div class="return-left-button">
-                <a href="/doi-ngu-nhan-su?tab=mobileWeb">
+                <a href="/ISE_Web/doi-ngu-nhan-su?tab=mobileWeb">
                     <img src="/ISE_Web/assets/return-icon.png" alt="Quay lại">
                 </a>
             </div>
