--- a/pages/doi-ngu-nhan-su/doi-ngu-nhan-su_kietnv.html
+++ b/pages/doi-ngu-nhan-su/doi-ngu-nhan-su_kietnv.html
@@ -54,7 +54,7 @@
             <h2>Lĩnh vực nghiên cứu</h2>
             <div class="research-carousel">
                 <!-- Nút trái -->
-                <a href="/giang-vien/khoavt" class="nav-btn prev-btn">
+                <a href="/ISE_Web/giang-vien/khoavt" class="nav-btn prev-btn">
                     <img src="/ISE_Web/assets/left-button-icon.png" alt="Trái" class="nav-icon">
                 </a>
 
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <!-- Nút phải -->
-                <a href="/giang-vien/thunta" class="nav-btn next-btn">
+                <a href="/ISE_Web/giang-vien/thunta" class="nav-btn next-btn">
                     <img src="/ISE_Web/assets/right-button-icon.png" alt="Phải" class="nav-icon">
                 </a>
             </div>
@@ -97,7 +97,7 @@
         <div class="info-wrapper" style="position: relative;">
             <!--nút quay lại trang đnns-->
             <div class="return-left-button">
-                <a href="/doi-ngu-nhan-su?tab=dataScience">
+                <a href="/ISE_Web/doi-ngu-nhan-su?tab=dataScience">
                     <img src="/ISE_Web/assets/return-icon.png" alt="Quay lại">
                 </a>
             </div>
