--- a/pages/home.html
+++ b/pages/home.html
@@ -246,7 +246,7 @@
                 góp phần xây dựng và phát triển xã hội tri thức.
             </p>
             <div class="cta-buttons">
-                <a href="/gioi-thieu" class="cta-button cta-button-primary">Tìm hiểu thêm</a>
+                <a href="/ISE_Web/gioi-thieu" class="cta-button cta-button-primary">Tìm hiểu thêm</a>
                 <a href="/lien_he" class="cta-button cta-button-secondary">Liên hệ</a>
             </div>
         </div>
@@ -291,7 +291,7 @@
                 <p class="quick-link-description">Thông tin về các chương trình đào tạo</p>
             </a>
 
-            <a href="/cac-nhom-nghien-cuu" class="quick-link-card">
+            <a href="/ISE_Web/cac-nhom-nghien-cuu" class="quick-link-card">
                 <div class="quick-link-title">🔍 Nhóm nghiên cứu</div>
                 <p class="quick-link-description">Các nhóm nghiên cứu của khoa</p>
             </a>
@@ -301,7 +301,7 @@
                 <p class="quick-link-description">Tin tức và sự kiện mới nhất</p>
             </a>
 
-            <a href="/cong-bo-khoa-hoc" class="quick-link-card">
+            <a href="/ISE_Web/cong-bo-khoa-hoc" class="quick-link-card">
                 <div class="quick-link-title">📄 Công bố khoa học</div>
                 <p class="quick-link-description">Các công trình nghiên cứu tiêu biểu</p>
             </a>
